k8s/spiffe-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spiffe-demo
  labels:
    app.kubernetes.io/part-of: spiffe-demo
