k8s/spiffe-demo/client-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spiffe-client-app
  namespace: spiffe-demo
  labels:
    app: spiffe-client-app
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: spiffe-client-app
    weight: 100
  port:
    targetPort: http
